# huqu

./: .gitignore  LICENSE  README.md  pipeline_config.yaml  pyproject.toml  simple_test.ipynb  tutorial.ipynb
config/: pipeline_config.yaml
huqu/: __init__.py  combined_analyzer.py  complete_report.py  end_2_end_pipeline.py  image_statistics.py  interclass_analysis.py  intraclass_analysis.py  main.py  pipeline.py  simple_test.py  tutorial.ipynb
huqu/analyzer/: complete_report.py  interclass_analysis.py  intraclass_analysis.py
huqu/examples/: basic_usage.py
huqu/models/: base.py  chatgpt.py  gemini.py
huqu/prompts/: templates.py
huqu/scripts/: test_image_statistics.py
huqu/stages/: base.py  caption_generation.py  criteria_initilization.py  criteria_refinement.py  dataset_loading.py  image_assignment.py
scripts/: end_2_end_pipeline.py  merge_datasets.py
