[tool.poetry]
name = "huqu"
version = "0.1.0"
description = "A library to evaluate the fairness of hugging face object detection datasets."
authors = ["hendrik.schulze.broering <hendrik.schulze.broering@googlemail.com>"]
license = "\"MIT\""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
