[tool.poetry]
name = "huqu"
version = "0.1.0"
description = "A library to evaluate the fairness of hugging face object detection datasets."
authors = ["hendrik.schulze.broering <hendrik.schulze.broering@googlemail.com>"]
license = "\"MIT\""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
datasets = "^3.2.0"
transformers = "^4.47.1"
pillow = "^11.1.0"
torch = "^2.5.1"
numpy = "^2.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
matplotlib = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
